@@ -5,7 +5,6 @@ import az.edu.ada.wm2.lab6.model.Product;
 import az.edu.ada.wm2.lab6.model.dto.CategoryRequestDto;
 import az.edu.ada.wm2.lab6.model.dto.CategoryResponseDto;
 import az.edu.ada.wm2.lab6.model.dto.ProductResponseDto;
-import az.edu.ada.wm2.lab6.model.mapper.CategoryMapper;
 import az.edu.ada.wm2.lab6.model.mapper.ProductMapper;
 import az.edu.ada.wm2.lab6.repository.CategoryRepository;
 import az.edu.ada.wm2.lab6.repository.ProductRepository;
@@ -14,6 +13,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,24 +25,25 @@ public class CategoryServiceImpl implements CategoryService {
 
     @Override
     public CategoryResponseDto create(CategoryRequestDto dto) {
-        Category category = CategoryMapper.toEntity(dto);
-        Category savedCategory = categoryRepository.save(category);
-        return CategoryMapper.toResponseDto(savedCategory);
+        Category category = new Category();
+        category.setName(dto.getName());
+        Category saved = categoryRepository.save(category);
+        return new CategoryResponseDto(saved.getId(), saved.getName());
     }
 
     @Override
     public List<CategoryResponseDto> getAll() {
         return categoryRepository.findAll().stream()
-                .map(CategoryMapper::toResponseDto)
-                .toList();
+                .map(c -> new CategoryResponseDto(c.getId(), c.getName()))
+                .collect(Collectors.toList());
     }
 
     @Override
     public CategoryResponseDto addProduct(UUID categoryId, UUID productId) {
         Category category = categoryRepository.findById(categoryId)
-                .orElseThrow(() -> new RuntimeException("Category not found with id: " + categoryId));
+                .orElseThrow(() -> new RuntimeException("Category not found"));
         Product product = productRepository.findById(productId)
-                .orElseThrow(() -> new RuntimeException("Product not found with id: " + productId));
+                .orElseThrow(() -> new RuntimeException("Product not found"));
 
         if (!product.getCategories().contains(category)) {
             product.getCategories().add(category);
@@ -52,16 +53,15 @@ public class CategoryServiceImpl implements CategoryService {
         }
 
         productRepository.save(product);
-        return CategoryMapper.toResponseDto(category);
+        return new CategoryResponseDto(category.getId(), category.getName());
     }
 
     @Override
     public List<ProductResponseDto> getProducts(UUID categoryId) {
         Category category = categoryRepository.findById(categoryId)
-                .orElseThrow(() -> new RuntimeException("Category not found with id: " + categoryId));
-
+                .orElseThrow(() -> new RuntimeException("Category not found"));
         return category.getProducts().stream()
                 .map(productMapper::toResponseDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
